<resources>
    <string name="app_name">Events</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="title_home">Home</string>
    <string name="text1">Text1</string>
    <string name="nomaz">Nomaz</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="event_abt">If you interested in IT event related, You mus t go to :\nHome page to check for events or \nGo to search module to search for relevant event or \nView favourite events \nSubscribe afterwards where the doc is sent to your email address</string>
    <string name="event_version">\nThis is version 1.0 \nDeveloped by Omonge Calvince in collaboration with Moringa School</string>
    <string name="version">Version</string>
    <string name="moringa">Moringa</string>
    <string name="mine_alone">mine alone</string>
    <string name="venue">Venue</string>
    <string name="enter_event">Enter Event</string>
    <string name="enter_date">Enter Date</string>
    <string name="venue_this">Venue</string>
    <string name="event_this">Event</string>
    <string name="enter_your_name">enter your name</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="event">Event</string>
    <string name="date_th">Date</string>
    <string name="date_this">Date</string>
    <string name="event_maber">Event</string>
    <string name="location">Location</string>
    <string name="search_this">Search</string>
    <string name="title_activity_all_detail">AllDetail</string>
    <string name="event_name_1">Event Name</string>
    <string name="fri_nov_22_11_00am">Fri,Nov 22,11:00am</string>
    <string name="nairobi_nairobi_kenya">Nairobi,Nairobi,Kenya</string>
    <string name="nov_22">Nov 22</string>
    <string name="descriptions_1">Descriptions</string>
    <string name="book_this">Book This</string>
    <string name="todo">TODO</string>
    <string name="search_location">Search Location</string>
    <string name="search_event_1">Search Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="book_1">Book</string>
    <string name="even">Event Name</string>
    <string name="todo_1">TODO</string>


</resources>
