<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/eventImageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/bestpic" />

        <TextView
            android:id="@+id/eventNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventImageView"
            tools:text="@string/event_name_1" />

        <TextView
            android:id="@+id/eventDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/eventNameTextView"
            tools:text="@string/fri_nov_22_11_00am" />

        <TextView
            android:id="@+id/vneTextView"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/eventNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/eventNameTextView"
            tools:text="@string/nairobi_nairobi_kenya" />

        <TextView
            android:id="@+id/monTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vneTextView"
            tools:text="@string/nov_22" />
        <TextView
            android:id="@+id/descrTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/vneTextView"
            app:layout_constraintTop_toBottomOf="@+id/vneTextView"
            tools:text="@string/descriptions_1" />


        <Button
            android:id="@+id/saveEventButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="36dp"
            android:background="@color/primaryLightColor"
            android:text="@string/book_1"
            android:textColor="@color/colorDivider"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>