<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginBottom="10dp"
    android:background="@drawable/rectangle"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/eventImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/eveno"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/almosttransparent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventNameTextView"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/event_name_1"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/fri_nov_22_11_00am"
            android:layout_height="wrap_content"
            android:id="@+id/eventDateTextView"
            android:textStyle="italic"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vneTextView"
                android:text="@string/nairobi_nairobi_kenya"
                android:textColor="@color/colorAccent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vneTextView"
                android:layout_alignParentTop="false"
                android:layout_alignBaseline="@id/vneTextView"
                android:layout_alignParentEnd="true"
                android:id="@+id/monTextView"
                android:text="@string/nov_22"
                android:textColor="@color/primaryLightColor"
                />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>